Work in progress

--- a/ARGvsFROMvsRUN/Dockerfile
+++ b/ARGvsFROMvsRUN/Dockerfile
@@ -17,18 +17,26 @@
 FROM ubuntu:trusty AS stage1
 
 # RUN cat command on /proc/version to display the version and put the value into the file `image_version` in the root dir.
-RUN cat /proc/version > image_version
+RUN cat /proc/version > image_version && \
+echo "This is stage1" >> image_version
 
 # RUN echo command and append some text to the existing `image_version` file.
-RUN echo "This is stage1" >> image_version
+#RUN echo "This is stage1" >> image_version
 
 # Scenario 3 - How FROM multi stage works?
 # This is the 2nd occurence of FROM and it is using a different image `alpine` which is much smaller.
-FROM alpine:3.12
+#FROM alpine:3.12
 
 # Here we use the COPY command and the `--from=stage1` flag, referencing the first build stage, giving the name and path of the file which we want to copy and the destination . (meaning root dir /)
-COPY --from=stage1 /image_version .
+#COPY --from=stage1 /image_version .
 
+# Scenario 4 - What about the RUN instruction?
+
+# RUN cat command on /proc/version to display the version and put the value into the file `image_version` in the root dir.
+#RUN cat /proc/version > image_version
+
+# RUN echo command and append some text to the existing `image_version` file.
+# RUN echo "This is stage1" >> image_version
 
 
 
