--- a/CMDvsENTRYPOINT/Dockerfile
+++ b/CMDvsENTRYPOINT/Dockerfile
@@ -2,10 +2,10 @@
 FROM ubuntu:trusty
 
 # Scenario 1 - CMD shell form
-CMD ping localhost
+#CMD ping localhost
 
 # Scenario 2 - CMD exec form (preffered form)
-#CMD ["/bin/ping","localhost"]
+CMD ["/bin/ping","localhost"]
 
 # Scenario 3 - CMD as default parameters to ENTRYPOINT in exec form
 #ENTRYPOINT ["/bin/ping","-c","5"]
